--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ allprojects {
         roboVMVersion = '1.8.0'
         box2DLightsVersion = '1.4'
         ashleyVersion = '1.6.0'
-        aiVersion = '1.6.0'
+        aiVersion = '1.6.1-SNAPSHOT'
     }
 
     repositories {
