--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ allprojects {
         gdxVersion = '1.7.2-SNAPSHOT'
         roboVMVersion = '1.9.0'
         box2DLightsVersion = '1.4'
-        aiVersion = '1.6.1-SNAPSHOT'
+        aiVersion = '1.7.0'
     }
 
     repositories {
