Use gdx-1.7.1-SNAPSHOT and fix breaking changes made to the pathfinding API

--- a/build.gradle
+++ b/build.gradle
@@ -16,9 +16,8 @@ allprojects {
     version = '1.0'
     ext {
         appName = 'GdxDemo3D'
-        gdxVersion = '1.8.0'
+        gdxVersion = '1.8.1-SNAPSHOT'
         roboVMVersion = '1.9.0'
-        box2DLightsVersion = '1.4'
         aiVersion = '1.7.1-SNAPSHOT'
     }
 
