Add behavior tree editor

--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ allprojects {
         mavenCentral()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         maven { url "https://oss.sonatype.org/content/repositories/releases/" }
+        maven { url "https://jitpack.io" }
     }
 }
 
@@ -95,6 +96,7 @@ project(":core") {
         compile "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-controllers:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-ai:$aiVersion"
+        compile "com.github.piotr-j.bte2:bte:master-SNAPSHOT"  // LOG -> https://jitpack.io/com/github/piotr-j/bte2/master-SNAPSHOT/build.log
     }
 }
 
