--- a/core/pom.xml
+++ b/core/pom.xml
@@ -10,20 +10,24 @@
         <version>0.1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>android</artifactId>
+    <artifactId>core</artifactId>
     <packaging>jar</packaging>
 
     <dependencies>
-        <!-- https://github.com/antivoland/GdxDemo3D -->
-        <dependency>
-            <groupId>com.mygdx.game</groupId>
-            <artifactId>core</artifactId>
-        </dependency>
-
         <!-- https://github.com/libgdx/libgdx -->
         <dependency>
             <groupId>com.badlogicgames.gdx</groupId>
-            <artifactId>gdx-backend-android</artifactId>
+            <artifactId>gdx</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.badlogicgames.gdx</groupId>
+            <artifactId>gdx-bullet</artifactId>
+        </dependency>
+
+        <!-- https://github.com/libgdx/gdx-ai -->
+        <dependency>
+            <groupId>com.badlogicgames.gdx</groupId>
+            <artifactId>gdx-ai</artifactId>
         </dependency>
     </dependencies>
 
