--- a/desktop/pom.xml
+++ b/desktop/pom.xml
@@ -13,6 +13,19 @@
     <artifactId>desktop</artifactId>
     <packaging>jar</packaging>
 
+    <dependencies>
+        <!-- https://github.com/antivoland/GdxDemo3D -->
+        <dependency>
+            <groupId>com.mygdx.game</groupId>
+            <artifactId>core</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.badlogicgames.gdx</groupId>
+            <artifactId>gdx-backend-lwjgl</artifactId>
+        </dependency>
+    </dependencies>
+
     <build>
         <sourceDirectory>src</sourceDirectory>
     </build>
