--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,8 @@
         <gdx.version>1.11.0</gdx.version>
         <gdx-ai.version>1.8.2</gdx-ai.version>
         <bte.version>0.7.1</bte.version>
+        <android.version>4.1.1.4</android.version>
+        <robovm.version>2.3.18</robovm.version>
 
         <maven.compiler.plugin.version>3.10.1</maven.compiler.plugin.version>
         <maven.source.plugin.version>3.2.1</maven.source.plugin.version>
@@ -52,6 +54,11 @@
             </dependency>
             <dependency>
                 <groupId>com.badlogicgames.gdx</groupId>
+                <artifactId>gdx-backend-lwjgl</artifactId>
+                <version>${gdx.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.badlogicgames.gdx</groupId>
                 <artifactId>gdx-bullet</artifactId>
                 <version>${gdx.version}</version>
             </dependency>
@@ -68,6 +75,20 @@
                 <groupId>com.github.piotr-j.bte2</groupId>
                 <artifactId>bte</artifactId>
                 <version>${bte.version}</version>
+            </dependency>
+
+            <!-- http://source.android.com -->
+            <dependency>
+                <groupId>com.google.android</groupId>
+                <artifactId>android</artifactId>
+                <version>${android.version}</version>
+            </dependency>
+
+            <!-- https://github.com/MobiVM/robovm -->
+            <dependency>
+                <groupId>com.mobidevelop.robovm</groupId>
+                <artifactId>robovm-cocoatouch</artifactId>
+                <version>${robovm.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
