--- a/desktop/pom.xml
+++ b/desktop/pom.xml
@@ -20,9 +20,15 @@
             <artifactId>core</artifactId>
         </dependency>
 
+        <!-- https://github.com/libgdx/libgdx -->
         <dependency>
             <groupId>com.badlogicgames.gdx</groupId>
             <artifactId>gdx-backend-lwjgl</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.badlogicgames.gdx</groupId>
+            <artifactId>gdx-platform</artifactId>
+            <classifier>natives-desktop</classifier>
         </dependency>
     </dependencies>
 
