--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,12 @@
                 <artifactId>gdx-bullet</artifactId>
                 <version>${gdx.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.badlogicgames.gdx</groupId>
+                <artifactId>gdx-platform</artifactId>
+                <version>${gdx.version}</version>
+                <classifier>natives-desktop</classifier>
+            </dependency>
 
             <!-- https://github.com/libgdx/gdx-ai -->
             <dependency>
