--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,12 @@
             </dependency>
             <dependency>
                 <groupId>com.badlogicgames.gdx</groupId>
+                <artifactId>gdx-bullet-platform</artifactId>
+                <version>${gdx.version}</version>
+                <classifier>natives-desktop</classifier>
+            </dependency>
+            <dependency>
+                <groupId>com.badlogicgames.gdx</groupId>
                 <artifactId>gdx-platform</artifactId>
                 <version>${gdx.version}</version>
                 <classifier>natives-desktop</classifier>
